# packages/conformance/fixtures/shop/src/generated/openapi.json
@@ -306,6 +306,15 @@
               ],
               "type": "string"
             }
+          },
+          {
+            "in": "query",
+            "name": "include",
+            "required": false,
+            "schema": {
+              "description": "comma-separated, of: user",
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -674,6 +683,15 @@
               "maximum": 9007199254740991,
               "minimum": -9007199254740991,
               "type": "integer"
+            }
+          },
+          {
+            "in": "query",
+            "name": "include",
+            "required": false,
+            "schema": {
+              "description": "comma-separated, of: user",
+              "type": "string"
             }
           }
         ],
